# mvl-processors

./: .gitignore  README.md  gate_design.py  input.asm  multiplication.asm  program_analysis.ipynb  run.bat
Diss/: back-up.tex.txt  dissertation.tex  dissertation.toc  references.bib
Diss/notebooks/: base_effciency.ipynb
Emulator/: BytePusher.py  NOTES.md  README.md  chip8.py  pygame_example.py  pyproject.toml  simple_pygame_display.py
LitReview/: lit_review.tex  references.bib
Proposal/: dissertation.sty  dissertation_proposal.aux  dissertation_proposal.bbl  dissertation_proposal.fdb_latexmk  dissertation_proposal.fls  dissertation_proposal.out  dissertation_proposal.tex  references.bib  test_references.bib
Rust-Playground/: 4bit_adder_bin.rs  4bit_adder_tri.rs
Verilog/: README.md  Verilog Notes.md  run_simulation.bat  ternary_components.v  ternary_defs.v  testbench.v
Verilog/binary/: alu.v  control.v  cpu.v  cpu_core.v  decode_instruction.v  fetch_instruction.v  machine.v  memory.v  parameters.vh  program_counter.v  program_loader.v  ram_32x16.v  ram_32x8.v  registers.v  run.bat  run_simulation.bat  simple_cpu.v  system.v  system_tb.v  unified_system.v  unified_system_tb.v  validate_cpu.bat  validate_ram_32x8.bat
Verilog/ternary/: alu.v  control.v  cpu.v  decode_instruction.v  fetch_instuction.v  machine.v  memory.v  parameters.vh  program_counter.v  program_loader.v  registers.v  ternary_defs.v  ternary_package.sv
assembly-dashboard-backend/: package.json  server.js
assembly-dashboard-frontend/: package.json
assembly-dashboard-frontend/src/: App.js
(+48 files in other folders)
