[tool.poetry]
name = "emulator"
version = "0.1.0"
description = ""
authors = ["Tim Tommins <tom.timmons@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyxel = "^2.2.3"
pygame = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
